--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="heading1">Hey! Boy How are You My name is Umair And You  are hacked</h1>
+    <h1 class="heading1">MashaAllah Afzal Bhai kesy hain </h1>
+    <h2>Kahn gaib hain</h2>
     
 </body>
 </html>
